--- a/style.css
+++ b/style.css
@@ -1,33 +1,58 @@
+* {
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+}
+
 body {
-    background-color:#31393c;
-    color:#d8d78f;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
+	background-color: #31393c;
+	color: #d8d78f;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	height: 100vh;
+	width: 100vw;
+}
+
+#gameContainer {
+	position: absolute;
+	height: 177.777vw;
+	width: 100vw;
+	max-height: 100vh;
+	max-width: 56.25vh;
+	/* background-image: url(./img/01/bg_01.jpg); */
+	/* background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center; */
+	left: 50%;
+	transform: translate(-50%, 0);
+	overflow: hidden;
 }
 
 #canvas {
-    background-color: #6d9086;
-    display:block;
-    margin:0 auto;
-    cursor: pointer;
+	background-color: #6d9086;
+	display: block;
+	cursor: pointer;
+	width: 100%;
+	height: 100%;
 }
 
 /* for levelGenerator */
-#colorPopup {
-    background-color: #eee;
-    width:100px;
-    position: fixed;
-    cursor: pointer;
-    left: 0;
-    right: 0;
-    border-radius: 10px;
-    padding: 4px;
+/* #colorPopup {
+	background-color: #eee;
+	width: 100px;
+	position: fixed;
+	cursor: pointer;
+	left: 0;
+	right: 0;
+	border-radius: 10px;
+	padding: 4px;
 }
+
 .colorWrapper {
-    width:18px;
-    height:18px;
-    margin:1px;
-    float:left;
-    border-radius: 15px;
-}
+	width: 18px;
+	height: 18px;
+	margin: 1px;
+	float: left;
+	border-radius: 15px;
+} */
