--- a/style.css
+++ b/style.css
@@ -4,9 +4,14 @@
 	overflow: hidden;
 }
 
+@font-face {
+	font-family: sora;
+	src: url("./public/fonts/sora.ttf");
+}
+
 body {
 	background-color: #31393c;
-	color: #d8d78f;
+	color: black;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
@@ -38,6 +43,60 @@ body {
 	width: 100%;
 	height: 100%;
 	z-index: 1;
+}
+
+#scoreContainer {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 7.5%;
+	z-index: 3;
+	display: flex;
+	justify-content: space-around;
+	font-family: sora;
+	font-size: 2.5vh;
+	align-items: center;
+}
+
+#scoreBackground {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 7.5%;
+	z-index: 2;
+}
+
+#scoreContainer span {
+	display: inline-block;
+}
+
+#pauseButton {
+	cursor: pointer;
+	background-color: transparent;
+	border: none;
+	width: 8%;
+	padding-top: 1%;
+	z-index: 4;
+}
+
+#pauseButton > img {
+	width: 100%;
+}
+
+#scoreSpan {
+	flex-basis: 30%;
+}
+
+#livesContainer {
+	flex-basis: 15%;
+	display: flex;
+	height: 42%;
+}
+#livesIcon {
+	height: 100%;
+	padding-right: 10%;
 }
 
 /* for levelGenerator */
