--- a/gamePage.css
+++ b/gamePage.css
@@ -1,26 +1,4 @@
-* {
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-}
-
-@font-face {
-	font-family: sora;
-	src: url("./public/fonts/sora.ttf");
-}
-
-body {
-	background-color: #31393c;
-	color: black;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	height: 100vh;
-	width: 100vw;
-}
-
-#gameContainer,
-#app {
+#gameContainer {
 	position: absolute;
 	height: 177.777vw;
 	width: 100vw;
@@ -28,8 +6,8 @@ body {
 	max-width: 56.25vh;
 	/* background-image: url(./img/01/bg_01.jpg); */
 	/* background-repeat: no-repeat;
-	background-size: contain;
-	background-position: center; */
+  background-size: contain;
+  background-position: center; */
 	left: 50%;
 	transform: translate(-50%, 0);
 	overflow: hidden;
@@ -59,6 +37,10 @@ body {
 	align-items: center;
 }
 
+#scoreContainer.active {
+	font-size: 4.44vw;
+}
+
 #scoreBackground {
 	position: absolute;
 	bottom: 0;
@@ -78,7 +60,7 @@ body {
 	border: none;
 	width: 8%;
 	padding-top: 1%;
-	z-index: 4;
+	z-index: 5;
 }
 
 #pauseButton > img {
@@ -94,6 +76,7 @@ body {
 	display: flex;
 	height: 42%;
 }
+
 #livesIcon {
 	height: 100%;
 	padding-right: 10%;
@@ -117,4 +100,4 @@ body {
 	margin: 1px;
 	float: left;
 	border-radius: 15px;
-} */
+} */ /*# sourceMappingURL=style.css.map */
