--- a/src/scorePage.css
+++ b/src/scorePage.css
@@ -5,17 +5,24 @@
 
 #scoreWrapper {
 	position: absolute;
-	height: 177.777vw;
+	height: 100vh;
 	width: 100vw;
-	max-height: 100vh;
+	max-height: 177.777vw;
 	max-width: 56.25vh;
-	background-image: url(../public/img/03/bg_03.png);
+	/* background-image: url(../public/img/03/bg_03.png);
 	background-repeat: no-repeat;
 	background-size: contain;
-	background-position: center;
+	background-position: center; */
 	left: 50%;
+	-webkit-transform: translate(-50%, 0);
+	-ms-transform: translate(-50%, 0);
 	transform: translate(-50%, 0);
 	overflow: hidden;
+}
+
+#scoreWrapper > img {
+	width: 100%;
+	height: 100%;
 }
 
 #nick {
@@ -84,6 +91,8 @@
 	position: absolute;
 	top: 45%;
 	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
 }
 
@@ -91,8 +100,40 @@
 	font-size: 12.44vw;
 }
 
+#nick::-webkit-input-placeholder {
+	padding: 2% 0 0 23%;
+}
+
+#nick::-moz-placeholder {
+	padding: 2% 0 0 23%;
+}
+
+#nick:-ms-input-placeholder {
+	padding: 2% 0 0 23%;
+}
+
+#nick::-ms-input-placeholder {
+	padding: 2% 0 0 23%;
+}
+
 #nick::placeholder {
 	padding: 2% 0 0 23%;
+}
+
+textarea:focus::-webkit-input-placeholder {
+	color: transparent;
+}
+
+textarea:focus::-moz-placeholder {
+	color: transparent;
+}
+
+textarea:focus:-ms-input-placeholder {
+	color: transparent;
+}
+
+textarea:focus::-ms-input-placeholder {
+	color: transparent;
 }
 
 textarea:focus::placeholder {
