--- a/src/startPage.css
+++ b/src/startPage.css
@@ -9,7 +9,7 @@
 	src: url("./public/fonts/sora.ttf");
 }
 body {
-	background-color: #31393c;
+	background-color: white;
 	color: black;
 	-webkit-user-select: none;
 	-moz-user-select: none;
@@ -21,17 +21,23 @@ body {
 #startContainer,
 #app {
 	position: absolute;
-	height: 177.777vw;
+	height: 100vh;
 	width: 100vw;
-	max-height: 100vh;
+	max-height: 177.777vw;
 	max-width: 56.25vh;
-	background-image: url(../public/img/01/bg_01.png);
+	/* background-image: url(../public/img/01/bg_01.png);
 	background-repeat: no-repeat;
 	background-size: contain;
-	background-position: center;
+	background-position: center; */
 	left: 50%;
+	-webkit-transform: translate(-50%, 0);
+	-ms-transform: translate(-50%, 0);
 	transform: translate(-50%, 0);
 	overflow: hidden;
+}
+#startContainer > img {
+	width: 100%;
+	height: 100%;
 }
 
 #startButton {
@@ -46,4 +52,21 @@ body {
 
 #startButton > img {
 	width: 100%;
+}
+
+.loader {
+	width: 100vw;
+	height: 100vh;
+	background-color: white;
+	font-size: 3vh;
+	color: black;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
 }
