--- a/gamePage.css
+++ b/gamePage.css
@@ -1,5 +1,7 @@
 #gameContainer {
 	position: absolute;
+	/* top: 0;
+	left: 0; */
 	height: 100vh;
 	width: 100vw;
 	max-height: 177.777vw;
@@ -8,10 +10,10 @@
 	/* background-repeat: no-repeat;
   background-size: contain;
   background-position: center; */
-	left: 50%;
+	/* left: 50%;
 	-webkit-transform: translate(-50%, 0);
 	-ms-transform: translate(-50%, 0);
-	transform: translate(-50%, 0);
+	transform: translate(-50%, 0); */
 	overflow: hidden;
 }
 
@@ -20,9 +22,12 @@
 	background-color: white;
 	display: block;
 	cursor: pointer;
-	width: 100%;
-	height: 100%;
+	/* width: 100%;
+	height: 100%; */
 	z-index: 1;
+	image-rendering: pixelated;
+	image-rendering: optimizespeed;
+	-webkit-tap-highlight-color: transparent;
 }
 
 #scoreContainer {
