--- a/gamePage.css
+++ b/gamePage.css
@@ -2,10 +2,10 @@
 	position: absolute;
 	/* top: 0;
 	left: 0; */
-	height: 100vh;
+	/* height: 100vh;
 	width: 100vw;
 	max-height: 177.777vw;
-	max-width: 56.25vh;
+	max-width: 56.25vh; */
 	/* background-image: url(./img/01/bg_01.jpg); */
 	/* background-repeat: no-repeat;
   background-size: contain;
@@ -25,9 +25,14 @@
 	/* width: 100%;
 	height: 100%; */
 	z-index: 1;
-	image-rendering: pixelated;
+	image-rendering: high-quality;
 	image-rendering: optimizespeed;
 	-webkit-tap-highlight-color: transparent;
+	image-rendering: optimizeSpeed; /* Older versions of FF          */
+	image-rendering: -moz-crisp-edges; /* FF 6.0+                       */
+	image-rendering: -webkit-optimize-contrast; /* Safari                        */
+	image-rendering: -o-crisp-edges; /* OS X & Windows Opera (12.02+) */
+	-ms-interpolation-mode: nearest-neighbor;
 }
 
 #scoreContainer {
