--- a/gamePage.css
+++ b/gamePage.css
@@ -1,19 +1,19 @@
 #gameContainer {
 	position: absolute;
-	/* top: 0;
-	left: 0; */
-	/* height: 100vh;
+	top: 0;
+	left: 0;
+	height: 100vh;
 	width: 100vw;
 	max-height: 177.777vw;
-	max-width: 56.25vh; */
+	max-width: 56.25vh;
 	/* background-image: url(./img/01/bg_01.jpg); */
 	/* background-repeat: no-repeat;
   background-size: contain;
   background-position: center; */
-	/* left: 50%;
+	left: 50%;
 	-webkit-transform: translate(-50%, 0);
 	-ms-transform: translate(-50%, 0);
-	transform: translate(-50%, 0); */
+	transform: translate(-50%, 0);
 	overflow: hidden;
 }
 
@@ -24,8 +24,12 @@
 	cursor: pointer;
 	/* width: 100%;
 	height: 100%; */
+	height: 100vh;
+	width: 100vw;
+	max-height: 177.777vw;
+	max-width: 56.25vh;
 	z-index: 1;
-	image-rendering: high-quality;
+	image-rendering: crisp-edges;
 	image-rendering: optimizespeed;
 	-webkit-tap-highlight-color: transparent;
 	image-rendering: optimizeSpeed; /* Older versions of FF          */
