--- a/src/startPage.css
+++ b/src/startPage.css
@@ -23,18 +23,18 @@ body {
 #startContainer,
 #app {
 	position: absolute;
-	/* height: 100vh;
+	height: 100vh;
 	width: 100vw;
 	max-height: 177.777vw;
-	max-width: 56.25vh; */
+	max-width: 56.25vh;
 	/* background-image: url(../public/img/01/bg_01.png);
 	background-repeat: no-repeat;
 	background-size: contain;
 	background-position: center; */
-	/* left: 50%; */
-	/* -webkit-transform: translate(-50%, 0);
-	-ms-transform: translate(-50%, 0); */
-	/* transform: translate(-50%, 0); */
+	/* left: 50%;
+	-webkit-transform: translate(-50%, 0);
+	-ms-transform: translate(-50%, 0);
+	transform: translate(-50%, 0); */
 	overflow: hidden;
 }
 #startContainer > img {
