--- a/src/scorePage.css
+++ b/src/scorePage.css
@@ -5,10 +5,8 @@
 
 #scoreWrapper {
 	position: absolute;
-	height: 100vh;
-	width: 100vw;
-	max-height: 177.777vw;
-	max-width: 56.25vh;
+	width: 100%;
+	height: 100%;
 	/* background-image: url(../public/img/03/bg_03.png);
 	background-repeat: no-repeat;
 	background-size: contain;
@@ -61,7 +59,7 @@
 	background-color: transparent;
 	border: none;
 	width: 56%;
-	bottom: 16%;
+	bottom: 16.5%;
 	left: 22%;
 }
 
@@ -75,7 +73,7 @@
 	background-color: transparent;
 	border: none;
 	width: 56%;
-	bottom: 2%;
+	bottom: 2.5%;
 	left: 22%;
 }
 
